--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="search_hint">Search</string>
     <string name="add_new_tag">Enter new tag...</string>
     <string name="no_results_found">No results found...</string>
+    <string name="title_activity_crop">CropActivity</string>
 </resources>
