--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 * TODO
-** Tattoo Page [6/6]
+** Tattoo Page [6/7]
 + [X] Increase size
 + [X] Add margin
 + [X] Change like button
@@ -12,12 +12,14 @@
   + [X] Camera button
 + [X] Tattoo Page opens profile activity
 + [X] Do not show 0 likes
-** Discovery [5/5]
++ [ ] Add Border
+** Discovery [5/6]
 + [X] Discovery Page Profile Button
 + [X] Pull-swipe longer animation
 + [X] Toolbar color / transparent with background
 + [X] Background color
 + [X] Discovery Page list view Align and increase size
++ [ ] Add secondary FrameLayout
 ** Tattoo Edit Page [9/9]
 + [X] Change public/private switch
 + [X] Put Delete Button
@@ -30,12 +32,14 @@
 + [X] Ask for confirmation Delete
 ** Other User Page [1/1]
 + [X] Image size
-** Search [5/5]
+** Search [6/6]
 + [X] [BUG] Search See More inactive
 + [X] [BUG] Tattoo Tag Search
 + [X] Show label when there are no results
 + [X] Add recent searches
 + [X] Search User-Name should list users
++ [X] Search shows private tattoo
++ [X] Delete Users in Search
 ** Core [10/10]
 + [X] Limit the Tag length
 + [X] Make all TagViews uniform
@@ -47,25 +51,26 @@
 + [X] Cache profile photo [[[https://github.com/facebook/fresco][Fresco]]]
 + [X] Ask for confirmation to discard changes in TattooEdit
 + [X] Make Images in RecyclerViewAdapter use Fresco
-** Upload page [5/10]
+** Upload page [7/11]
 + [X] Change Add tag button to textinput and move to bottom
 + [X] Enable crop without clicking image
 + [X] Move submit to the bottom
 + [X] Run tensorflow initially
 + [X] Revert to original
++ [X] Save cropped image
++ [X] second Crop shows small line
++ [ ] Uncomment extract tags
 + [ ] Fill with white if <=300
-+ [ ] second Crop shows small line
 + [ ] Show cropped image
-+ [ ] Save cropped image
-** See more [2/7]
++ [ ] Give information on network failure
+** See more [4/6]
 + [X] See more changes to single row
 + [X] Change See More button
++ [X] Add background
++ [X] See more Card layout grid (or simply add borders)
 + [ ] Auto load at the bottom of the page (Requires change in server)
 + [ ] Make See-More image density dynamic to make it fit 3 items
-+ [ ] Add background
-+ [ ] See more Card layout grid (or simply add borders)
-+ [ ] Delete Users
-** Profile Page [6/9]
+** Profile Page [6/11]
 + [X] Make profile icon circular
 + [X] Profile page list alignment
 + [X] Profile page move toolbar inside the view
@@ -75,15 +80,15 @@
 + [ ] Auto-load images as they scroll
 + [ ] Set Toolbar Icon
 + [ ] Add toolbar transition animation
++ [ ] Make tabs 3 column
++ [ ] Add refresh
 ** AR Camera [0/2]
 + [ ] Save
 + [ ] Share
-** Server [2/5]
+** Server [3/3]
 + [X] Added /delete end-point
 + [X] Move to DigitalOcean
-+ [ ] Tattoo is added to database even if upload function fails
-+ [ ] /delete and /like reads tattoo-id from email field
-+ [ ] While saving make white pixels transparent ??
++ [X] While saving, make white pixels transparent ??
 ** Visual [0/3]
 + [ ] Check constant dp
 + [ ] Change text font
@@ -92,7 +97,7 @@
 + [ ] Decide on color scheme
 + [ ] Animations and transitions:
   + [[https://github.com/castorflex/SmoothProgressBar?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=370][Progress Bar]]
-** ??? [1/11]
+** ??? [1/12]
 + TattooEdit cat problem should appear in Upload but didn't
 + [X] Auto-login fails
 + [ ] Change RecyclerView in User instance to ArrayList<Tattoo> and remove any UI related parts
@@ -104,3 +109,6 @@
 + [ ] Check if PNG (in server or android ?)
 + [ ] Try to combine TagGroup and Tattoo.Tags
 + [ ] Remove icon from suggestions (Check Github and [[http://stackoverflow.com/questions/30808150/toolbar-search-suggestions-theming][SO]])
++ [ ] Tattoo is added to database even if upload function fails
++ [ ] /delete and /like reads tattoo-id from email field
++ [ ] Tags are deleted when changed visibility
